[package]
name = "turbine_otc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "turbine_otc"

[build]
rustflags = ["--cfg=target_os=\"solana\""]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = "=2.2.1"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["memo", "metadata"] }
raydium_clmm_cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-clmm-cpi", branch = "anchor-0.30.1" }
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }